# trash-repro

./: Cargo.toml
src/: main.rs
