[package]
name = "trash-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Ole"
]